added event requests
