# back/src/modules/event/dto/request.dto.ts
@@ -1,0 +1,15 @@
+import { EventEnum } from '@/db/drizzle/schema/event/enums/event-types.enum';
+import { InferInsertRequest } from '@/db/drizzle/schema/event/schema';
+import { ImageType } from '@/modules/uploads/types/file.interface';
+
+export class CreateRequestDto implements Partial<InferInsertRequest> {
+  name: string;
+  image: ImageType;
+  description: string;
+  type: EventEnum;
+}
+
+export class MakeDecisions {
+  requestUid: string;
+  decision: boolean;
+}
