# back/src/modules/event/event.controller.ts
@@ -1,0 +1,31 @@
+import { CreateRequestDto, MakeDecisions } from './dto/request.dto';
+import type { Request, Response, NextFunction } from 'express';
+import * as eventService from './event.service';
+
+export async function createRequest(
+  req: Request<{}, {}, CreateRequestDto>,
+  res: Response,
+  next: NextFunction
+) {
+  try {
+    const result = await eventService.createRequest(req.user.uid, req.body);
+
+    return res.status(200).json(result);
+  } catch (error) {
+    next(error);
+  }
+}
+
+export async function makeDecision(
+  req: Request<{}, {}, MakeDecisions>,
+  res: Response,
+  next: NextFunction
+) {
+  try {
+    const result = await eventService.makeDecisions(req.user.uid, req.body);
+
+    return res.status(200).json(result);
+  } catch (error) {
+    next(error);
+  }
+}
